--- a/homework22.html
+++ b/homework22.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
     <script defer src="./assets/js/js-code.js"></script>
 </head>
 <body>
-    
+    <button id="btn1">Task1</button>
+    <a href="#">клікни, аби з’явилась кнопка</a>
+    <div class="lamp"></div>
+    <button id="btnOn">on</button>
+    <button id="btnOff">off</button>
 </body>
 </html>
